# CrazyLIMS

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  eln-jupyterlite-embedding-attempts.md  functional-requirements-lims-eln.md  jupyterlite-eln-plan.md  minimal-eln-project-access.md  overarching-implementaion-plan.md  phase0-phase1-detailed-plan.md  phase1-redux-detailed-plan.md  phase2-detailed-plan.md  phase2-redux-detailed-plan.md  post-phase2-readiness-plan.md  record_of_prompts.md  security-access-control-plan-phase1-and-2-security-redux.md  tech-option-d-postgresql-schema-driven.md
ui/python-postgrest-client/: README.md  pyproject.toml
ui/python-postgrest-client/crazylims_postgrest_client/: __init__.py  client.py  pyodide.py
ui/python-postgrest-client/crazylims_postgrest_client/models/: __init__.py  artefact_scopes.py  audit_log.py  delete_api_clients_prefer.py  delete_api_tokens_prefer.py  delete_artefact_relationships_prefer.py  delete_artefact_scopes_prefer.py  delete_artefact_trait_values_prefer.py  delete_artefact_traits_prefer.py  delete_artefact_types_prefer.py  delete_artefacts_prefer.py  delete_audit_log_prefer.py  delete_container_slot_definitions_prefer.py  delete_container_slots_prefer.py  delete_notebook_entries_prefer.py  delete_notebook_entry_versions_prefer.py  delete_process_instances_prefer.py  delete_process_io_prefer.py  delete_process_scopes_prefer.py  delete_process_types_prefer.py  delete_roles_prefer.py  delete_scopes_prefer.py  (+156 more)
ui/python-postgrest-client/tests/: test_actor_accessible_scopes.py  test_pyodide_transport.py
(+254 files in other folders)
