[tool.poetry]
name = "crazylims-postgrest-client"
version = "0.1.0"
description = "A client library for accessing PostgREST API"
authors = []
readme = "README.md"
packages = [
    { include = "crazylims_postgrest_client" },
]
include = ["CHANGELOG.md", "crazylims_postgrest_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.28.1"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"
pyodide-http = "^0.2.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
